<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/isabelline">

    <TextView
        android:id="@+id/tv_logomark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/act_login_tvtext_logomark"
        android:textColor="@color/flame"
        android:textSize="@dimen/biggest_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/act_login_tvtext_slogan"
        android:textAlignment="center"
        android:textColor="@color/moonstoneBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logomark" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/act_login_ethint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/taupe"
        android:textColorHint="@color/taupe"
        android:textSize="@dimen/normal_text_size5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/act_login_ethint_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/taupe"
        android:textColorHint="@color/taupe"
        android:textSize="@dimen/normal_text_size5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/flame"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/act_login_bttext_enter"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_text_size5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />


</android.support.constraint.ConstraintLayout>