<?xml version="1.0" encoding="utf-8"?><!-- Ou ScrollView-->
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/isabelline"
        android:paddingTop="@dimen/normal_padding">

        <TextView
            android:id="@+id/tv_general_statistics_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/frag_general_statistics_subtitle"
            android:textColor="@color/taupe"
            android:textSize="@dimen/normal_text_size5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_statistics"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_general_statistics_subtitle"
            card_view:cardUseCompatPadding="true">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="@dimen/small_padding">

                <TextView
                    android:id="@+id/tv_average_consumption_hour_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/frag_general_statistics_average_consumption_hour"
                    android:textColor="@color/taupe"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_average_consumption_hour_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="133L"
                    android:textColor="@color/flame"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_average_consumption_hour_label" />

                <TextView
                    android:id="@+id/tv_average_consumption_day_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/frag_general_statistics_average_consumption_day"
                    android:textColor="@color/taupe"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_average_consumption_day_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="3434L"
                    android:textColor="@color/flame"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_average_consumption_day_label" />

                <TextView
                    android:id="@+id/tv_average_consumption_month_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/frag_general_statistics_average_consumption_month"
                    android:textColor="@color/taupe"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_average_consumption_month_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="23456L"
                    android:textColor="@color/flame"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_average_consumption_month_label" />


                <TextView
                    android:id="@+id/tv_total_consumption_day_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/frag_general_statistics_total_consumption_day"
                    android:textColor="@color/taupe"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_average_consumption_hour_value" />

                <TextView
                    android:id="@+id/tv_total_consumption_day_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="145L"
                    android:textColor="@color/flame"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_total_consumption_day_label" />

                <TextView
                    android:id="@+id/tv_total_consumption_month_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/frag_general_statistics_total_consumption_month"
                    android:textColor="@color/taupe"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_average_consumption_day_value" />

                <TextView
                    android:id="@+id/tv_total_consumption_month_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="3434L"
                    android:textColor="@color/flame"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_consumption_month_label" />

                <TextView
                    android:id="@+id/tv_total_consumption_year_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/frag_general_statistics_total_consumption_year"
                    android:textColor="@color/taupe"
                    android:textSize="@dimen/small_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_average_consumption_month_value" />

                <TextView
                    android:id="@+id/tv_total_consumption_year_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="23456L"
                    android:textColor="@color/flame"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_total_consumption_year_label" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <br.com.acoaapp.main.commons.components.customlinechart.CustomLineChart
            android:id="@+id/lc_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_statistics" />

        <ProgressBar
            android:id="@+id/pb_general_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>